added lin class method, which returns current client object. sso implementation added

--- a/SNTests/SNTests/SNTests-Info.plist
+++ b/SNTests/SNTests/SNTests-Info.plist
@@ -38,6 +38,16 @@
 				<string>ap4y.SNTests</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>linengine</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
