--- a/SNTests/SNTests/SNTests-Info.plist
+++ b/SNTests/SNTests/SNTests-Info.plist
@@ -32,7 +32,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>ap4y.SNTests</string>
+			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>ap4y.SNTests</string>
