twitter sso example added

--- a/SNTests/SNTests/SNTests-Info.plist
+++ b/SNTests/SNTests/SNTests-Info.plist
@@ -48,6 +48,14 @@
 				<string>linengine</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>twengine</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
