xing client implemented

--- a/SNTests/SNTests/SNTests-Info.plist
+++ b/SNTests/SNTests/SNTests-Info.plist
@@ -56,6 +56,16 @@
 				<string>twengine</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>xingengine</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
